--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 .chart .axis path,
-#apple-stock-chart .axis line {
+.chart .axis line {
   fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
@@ -16,6 +16,12 @@ body {
 .chart .line {
   fill: none;
   stroke: steelblue;
+  stroke-width: 1.5px;
+}
+
+#apple-stock-chart-2 .line {
+  fill: none;
+  stroke: green;
   stroke-width: 1.5px;
 }
 
